LCL: Chinese and Russian translation updates
(cherry picked from commit 9e1f2eaec0906b9fcf7fff46868c69f56090b203)
(cherry picked from commit a4681c4da788bd83d49398f0ff35ce5699212a98)
(cherry picked from commit c13623d31825b2d556e188e28f7c3713966abf95)
(cherry picked from commit 261284f116c10c022e5fde6997c34932d5ba6a1a)

--- a/lcl/languages/lclstrconsts.zh_CN.po
+++ b/lcl/languages/lclstrconsts.zh_CN.po
@@ -751,7 +751,7 @@ msgstr "列表索引超过限制 (%d)"
 
 #: lclstrconsts.rsmacoscolordialogmbpick
 msgid "Pick"
-msgstr ""
+msgstr "采集"
 
 #: lclstrconsts.rsmacoseditmenu
 msgctxt "lclstrconsts.rsmacoseditmenu"
@@ -786,11 +786,11 @@ msgstr "撤销"
 
 #: lclstrconsts.rsmacosfiledialogpackageswitchtips
 msgid "Treat File Packages (such as *.app files) as Directories to access their internal files"
-msgstr ""
+msgstr "将文件包（例如*.app文件）视为目录，允许访问文件包的内部文件"
 
 #: lclstrconsts.rsmacosfiledialogpackageswitchtitle
 msgid "Show File Package Contents"
-msgstr ""
+msgstr "显示包内容"
 
 #: lclstrconsts.rsmacosfileformat
 msgid "File Format:"
@@ -798,7 +798,7 @@ msgstr "文件格式："
 
 #: lclstrconsts.rsmacosfontdialogmbselect
 msgid "Select"
-msgstr ""
+msgstr "选择"
 
 #: lclstrconsts.rsmacosmenuabout
 #, object-pascal-format
@@ -838,7 +838,7 @@ msgstr "褐红色"
 # 此处翻译为取消更合适，中止在这里表意不正确
 #: lclstrconsts.rsmbabort
 msgid "Abort"
-msgstr "取消(&C)"
+msgstr "放弃"
 
 #: lclstrconsts.rsmball
 msgid "&All"
@@ -847,7 +847,7 @@ msgstr "所有(&A)"
 #: lclstrconsts.rsmbcancel
 msgctxt "lclstrconsts.rsmbcancel"
 msgid "Cancel"
-msgstr "取消(&C)"
+msgstr "取消"
 
 #: lclstrconsts.rsmbclose
 msgid "&Close"
@@ -867,7 +867,7 @@ msgstr "否(&N)"
 
 #: lclstrconsts.rsmbnotoall
 msgid "No to all"
-msgstr "全部选否(&T)"
+msgstr "全部选否"
 
 #: lclstrconsts.rsmbok
 msgid "&OK"
