--- a/lcl/languages/lclstrconsts.zh_TW.po
+++ b/lcl/languages/lclstrconsts.zh_TW.po
@@ -169,7 +169,7 @@ msgstr ""
 #: lclstrconsts.rscancelrecordhint
 msgctxt "lclstrconsts.rscancelrecordhint"
 msgid "Cancel"
-msgstr ""
+msgstr "取消"
 
 #: lclstrconsts.rscannotfocus
 msgid "Can not focus"
@@ -750,7 +750,7 @@ msgstr ""
 
 #: lclstrconsts.rsmacoscolordialogmbpick
 msgid "Pick"
-msgstr ""
+msgstr "采集"
 
 #: lclstrconsts.rsmacoseditmenu
 msgctxt "lclstrconsts.rsmacoseditmenu"
@@ -785,19 +785,19 @@ msgstr "復原"
 
 #: lclstrconsts.rsmacosfiledialogpackageswitchtips
 msgid "Treat File Packages (such as *.app files) as Directories to access their internal files"
-msgstr ""
+msgstr "將檔案包（例如 *.app 檔案）視為資料夾，以便存取其內部檔案"
 
 #: lclstrconsts.rsmacosfiledialogpackageswitchtitle
 msgid "Show File Package Contents"
-msgstr ""
+msgstr "顯示包內容"
 
 #: lclstrconsts.rsmacosfileformat
 msgid "File Format:"
-msgstr ""
+msgstr "文件格式"
 
 #: lclstrconsts.rsmacosfontdialogmbselect
 msgid "Select"
-msgstr ""
+msgstr "選擇"
 
 #: lclstrconsts.rsmacosmenuabout
 #, object-pascal-format
@@ -836,64 +836,64 @@ msgstr ""
 
 #: lclstrconsts.rsmbabort
 msgid "Abort"
-msgstr ""
+msgstr "中止"
 
 #: lclstrconsts.rsmball
 msgid "&All"
-msgstr ""
+msgstr "全部(&A)"
 
 #: lclstrconsts.rsmbcancel
 msgctxt "lclstrconsts.rsmbcancel"
 msgid "Cancel"
-msgstr ""
+msgstr "取消"
 
 #: lclstrconsts.rsmbclose
 msgid "&Close"
-msgstr ""
+msgstr "關閉(&C)"
 
 #: lclstrconsts.rsmbhelp
 msgid "&Help"
-msgstr ""
+msgstr "幫助(&H)"
 
 #: lclstrconsts.rsmbignore
 msgid "&Ignore"
-msgstr ""
+msgstr "忽略(&I)"
 
 #: lclstrconsts.rsmbno
 msgid "&No"
-msgstr ""
+msgstr "否(&N)"
 
 #: lclstrconsts.rsmbnotoall
 msgid "No to all"
-msgstr ""
+msgstr "全否"
 
 #: lclstrconsts.rsmbok
 msgid "&OK"
-msgstr ""
+msgstr "確定(&O)"
 
 #: lclstrconsts.rsmbopen
 msgid "&Open"
-msgstr ""
+msgstr "打開(&O)"
 
 #: lclstrconsts.rsmbretry
 msgid "&Retry"
-msgstr ""
+msgstr "重試(&R)"
 
 #: lclstrconsts.rsmbsave
 msgid "&Save"
-msgstr ""
+msgstr "儲存(&S)"
 
 #: lclstrconsts.rsmbunlock
 msgid "&Unlock"
-msgstr ""
+msgstr "解鎖(&U)"
 
 #: lclstrconsts.rsmbyes
 msgid "&Yes"
-msgstr ""
+msgstr "是(&Y)"
 
 #: lclstrconsts.rsmbyestoall
 msgid "Yes to &All"
-msgstr ""
+msgstr "全是(&A)"
 
 #: lclstrconsts.rsmedgraycolorcaption
 msgid "Medium Gray"
