IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.af_ZA.po
+++ b/languages/lazaruside.af_ZA.po
@@ -1321,7 +1321,7 @@ msgid "Compiler messages"
 msgstr ""
 
 #: lazarusidestrconsts.dlgcompilermessages
-msgid "Compiler messages language file (*.msg)"
+msgid "Compiler messages language file for the Messages window (*.msg)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgcompleteproperties
