--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -1379,7 +1379,7 @@ msgstr "הודעות מהדר"
 #: lazarusidestrconsts.dlgcompilermessages
 #, fuzzy
 #| msgid "Compiler messages language file"
-msgid "Compiler messages language file (*.msg)"
+msgid "Compiler messages language file for the Messages window (*.msg)"
 msgstr "קובץ שפת הודעות מהדר"
 
 #: lazarusidestrconsts.dlgcompleteproperties
