--- a/languages/lazaruside.hu.po
+++ b/languages/lazaruside.hu.po
@@ -1340,7 +1340,9 @@ msgid "Compiler messages"
 msgstr "Fordító üzenetei"
 
 #: lazarusidestrconsts.dlgcompilermessages
-msgid "Compiler messages language file (*.msg)"
+#, fuzzy
+#| msgid "Compiler messages language file (*.msg)"
+msgid "Compiler messages language file for the Messages window (*.msg)"
 msgstr "Fordító üzenetek nyelvi fájlja (*.msg)"
 
 #: lazarusidestrconsts.dlgcompleteproperties
