--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -1347,7 +1347,7 @@ msgid "Compiler messages"
 msgstr ""
 
 #: lazarusidestrconsts.dlgcompilermessages
-msgid "Compiler messages language file (*.msg)"
+msgid "Compiler messages language file for the Messages window (*.msg)"
 msgstr ""
 
 #: lazarusidestrconsts.dlgcompleteproperties
