--- a/components/anchordocking/languages/anchordockstr.uk.po
+++ b/components/anchordocking/languages/anchordockstr.uk.po
@@ -28,7 +28,13 @@ msgid "Amount of pixel the mouse has to drag before drag starts"
 msgstr "К-сть пікселів, на яку мишка повинна переміститись перед початком перетягування"
 
 #: anchordockstr.adrsanchordockbackuprecovery
-msgid "AnchorDock Backup Recovery"
+msgctxt "anchordockstr.adrsanchordockbackuprecovery"
+msgid "Backup/Restore Anchordocking Layout"
+msgstr ""
+
+#: anchordockstr.adrsanchordockbackuprecoverycaption
+msgctxt "anchordockstr.adrsanchordockbackuprecoverycaption"
+msgid "Backup/Restore Anchordocking Layout"
 msgstr ""
 
 #: anchordockstr.adrsanchorisnotsplitternodeanchors
@@ -72,7 +78,8 @@ msgid "Backup failed"
 msgstr ""
 
 #: anchordockstr.adrsbackupsuccessful
-msgid "Backup successful"
+#, object-pascal-format
+msgid "Backup successful: %s"
 msgstr ""
 
 #: anchordockstr.adrsbottom
@@ -207,7 +214,7 @@ msgid "Highlight header of focused docked control"
 msgstr "Підсвітити заголовок стикованого елемента у фокусі"
 
 #: anchordockstr.adrslayoutrestoredsuccessfully
-msgid "Layout restored successfully!"
+msgid "Layout restored successfully"
 msgstr ""
 
 #: anchordockstr.adrsleft
@@ -361,7 +368,8 @@ msgid "Unable to delete the file"
 msgstr ""
 
 #: anchordockstr.adrsunabletoreadfile
-msgid "Unable to read the file"
+#, object-pascal-format
+msgid "Unable to read the file: %s"
 msgstr ""
 
 #: anchordockstr.adrsundock
