--- a/components/anchordocking/languages/anchordockstr.pot
+++ b/components/anchordocking/languages/anchordockstr.pot
@@ -15,7 +15,13 @@ msgid "Amount of pixel the mouse has to drag before drag starts"
 msgstr ""
 
 #: anchordockstr.adrsanchordockbackuprecovery
-msgid "AnchorDock Backup Recovery"
+msgctxt "anchordockstr.adrsanchordockbackuprecovery"
+msgid "Backup/Restore Anchordocking Layout"
+msgstr ""
+
+#: anchordockstr.adrsanchordockbackuprecoverycaption
+msgctxt "anchordockstr.adrsanchordockbackuprecoverycaption"
+msgid "Backup/Restore Anchordocking Layout"
 msgstr ""
 
 #: anchordockstr.adrsanchorisnotsplitternodeanchors
@@ -59,7 +65,8 @@ msgid "Backup failed"
 msgstr ""
 
 #: anchordockstr.adrsbackupsuccessful
-msgid "Backup successful"
+#, object-pascal-format
+msgid "Backup successful: %s"
 msgstr ""
 
 #: anchordockstr.adrsbottom
@@ -194,7 +201,7 @@ msgid "Highlight header of focused docked control"
 msgstr ""
 
 #: anchordockstr.adrslayoutrestoredsuccessfully
-msgid "Layout restored successfully!"
+msgid "Layout restored successfully"
 msgstr ""
 
 #: anchordockstr.adrsleft
@@ -348,7 +355,8 @@ msgid "Unable to delete the file"
 msgstr ""
 
 #: anchordockstr.adrsunabletoreadfile
-msgid "Unable to read the file"
+#, object-pascal-format
+msgid "Unable to read the file: %s"
 msgstr ""
 
 #: anchordockstr.adrsundock
