--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.pot
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.pot
@@ -77,7 +77,7 @@ msgid "Some backends may compare case-sensitive. Regex may be limited, if suppor
 msgstr ""
 
 #: idedebuggerstringconstants.dbgoptexclrtsomebackendsmayonlysuppor
-msgid "Some backends may only support function name (equal) checks"
+msgid "Some backends may only support function name (equal) checks."
 msgstr ""
 
 #: idedebuggerstringconstants.dbgoptexclrtsteppingexclusions
