--- a/ide/packages/idedebugger/languages/idedebuggerstringconstants.ru.po
+++ b/ide/packages/idedebugger/languages/idedebuggerstringconstants.ru.po
@@ -56,59 +56,59 @@ msgstr "Больше не спрашивать"
 
 #: idedebuggerstringconstants.dbgoptexclrtfilenameequals
 msgid "Filename (equals)"
-msgstr ""
+msgstr "Имя файла (совпадает)"
 
 #: idedebuggerstringconstants.dbgoptexclrtfunctionequals
 msgid "Function (equals)"
-msgstr ""
+msgstr "Функция (совпадает)"
 
 #: idedebuggerstringconstants.dbgoptexclrtfunctionregex
 msgid "Function (regex)"
-msgstr ""
+msgstr "Функция (регулярное выражение)"
 
 #: idedebuggerstringconstants.dbgoptexclrtmatchfunctionname
 msgid "Match function name:"
-msgstr ""
+msgstr "Сравнение имени функции:"
 
 #: idedebuggerstringconstants.dbgoptexclrtmatchpathorfile
 msgid "Match path or file:"
-msgstr ""
+msgstr "Сравнение пути или имени файла:"
 
 #: idedebuggerstringconstants.dbgoptexclrtnewsteppingexclusion
 msgid "New stepping exclusion"
-msgstr ""
+msgstr "Новое исключение для шагов"
 
 #: idedebuggerstringconstants.dbgoptexclrtpathfileregex
 msgid "Path/File (regex)"
-msgstr ""
+msgstr "Путь/файл (регулярное выражение)"
 
 #: idedebuggerstringconstants.dbgoptexclrtsomebackendsmaycomparecas
 msgid "Some backends may compare case-sensitive. Regex may be limited, if supported."
-msgstr ""
+msgstr "Некоторые механизмы отладки могут учитывать регистр. Поддержка регулярных выражений может иметь ограничения."
 
 #: idedebuggerstringconstants.dbgoptexclrtsomebackendsmayonlysuppor
-msgid "Some backends may only support function name (equal) checks"
-msgstr ""
+msgid "Some backends may only support function name (equal) checks."
+msgstr "Некоторые механизмы отладки могут поддерживать только проверку совпадения имён функций."
 
 #: idedebuggerstringconstants.dbgoptexclrtsteppingexclusions
 msgid "Stepping exclusions"
-msgstr ""
+msgstr "Исключения для шагов"
 
 #: idedebuggerstringconstants.dbgoptexclrtstorestepexclusionsinsess
 msgid "Store step-exclusions in session"
-msgstr ""
+msgstr "Сохранять исключения для шагов в сеансе работы"
 
 #: idedebuggerstringconstants.dbgoptexclrtthisonlyaffectsthelistofe
 msgid "This only affects the list of exclusions below. The settings which list to use are always stored in the session."
-msgstr ""
+msgstr "Затрагивает только список исключений ниже. Параметры, задающие, какой список использовать, всегда хранятся в сеансе работы."
 
 #: idedebuggerstringconstants.dbgoptexclrtusetheidegloballistofexcl
 msgid "Use the IDE global list of exclusions"
-msgstr ""
+msgstr "Использовать глобальный список исключений IDE"
 
 #: idedebuggerstringconstants.dbgoptexclrtusetheprojectlistofexclus
 msgid "Use the project list of exclusions"
-msgstr ""
+msgstr "Использовать список исключений проекта"
 
 #: idedebuggerstringconstants.dbgoptfrmchooseformatter
 msgid "Choose formatter"
